# esp32_projects

./: .gitignore
config_example/: .gitignore  CMakeLists.txt  buildall  gen_config.sh
config_example/main/: CMakeLists.txt  config_example.c
rpc_example/: .gitignore  CMakeLists.txt  buildall  config_template.yaml  gen_config.sh  gen_rpc_msg.sh  gen_rpc_python.sh  nvs_rpc.csv  partitions.csv  paths.sh  proto_files.sh  rpc_msg.yaml  sdkconfig
rpc_example/main/: CMakeLists.txt  Config.pb.c  Config.pb.h  Config.proto  ProtoRpcApp.pb.c  ProtoRpcApp.pb.h  ProtoRpcApp.proto  rpc_example.c
rpc_example/python/: init_env.sh  requirements.txt
rpc_example/python/rpc/: example.py
wifi_client/: .gitignore  CMakeLists.txt  README.md  buildall  sdkconfig
wifi_client/main/: CMakeLists.txt  Kconfig.projbuild  wifi_client.c
ws2812_controller/: .gitignore  README.md  buildall  config_template.yaml  gen_config.sh  nvs_config.csv  proto_files.sh  sdkconfig
ws2812_controller/main/: CMakeLists.txt  Config.pb.c  Config.pb.h  ProtoRpcApp.proto  ws2812_controller.c
ws2812_controller/python/: .gitignore  init_env.sh
